--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "iview": "^2.14.3",
     "vue": "^2.5.16",
+    "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -20,6 +21,7 @@
     "babel-plugin-import": "^1.8.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "vue-cli-plugin-i18n": "^0.5.0",
     "vue-template-compiler": "^2.5.16"
   },
   "browserslist": [
