--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "iview": "^2.14.3",
+    "iview": "^3.0.1",
+    "jquery": "^3.3.1",
     "vue": "^2.5.16",
     "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
-    "@vue/cli-service": "^3.0.0-beta.15",
+    "@vue/cli-plugin-babel": "^3.0.3",
+    "@vue/cli-service": "^3.0.3",
     "babel-plugin-import": "^1.8.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "vue-cli-plugin-i18n": "^0.5.0",
+    "vue-cli-plugin-iview": "^1.0.6",
     "vue-template-compiler": "^2.5.16"
   },
   "browserslist": [
