--- a/package.json
+++ b/package.json
@@ -9,22 +9,25 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "iview": "^3.0.1",
+    "iview": "^3.1.3",
     "jquery": "^3.3.1",
-    "vue": "^2.5.16",
-    "vue-i18n": "^8.0.0",
+    "vue": "^2.5.17",
+    "vue-i18n": "^8.2.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.3",
-    "@vue/cli-service": "^3.0.3",
-    "babel-plugin-import": "^1.8.0",
-    "less": "^3.0.4",
+    "@vue/cli-plugin-babel": "^3.0.5",
+    "@vue/cli-service": "^3.0.5",
+    "babel-plugin-import": "^1.9.1",
+    "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "vue-cli-plugin-i18n": "^0.5.0",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "vue-cli-plugin-i18n": "^0.5.1",
     "vue-cli-plugin-iview": "^1.0.6",
-    "vue-template-compiler": "^2.5.16"
+    "vue-cli-plugin-sass-resources-loader": "^1.0.0",
+    "vue-template-compiler": "^2.5.17"
   },
   "browserslist": [
     "> 1%",
