--- a/package.json
+++ b/package.json
@@ -8,21 +8,28 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/vue-fontawesome": "^0.1.2",
+    "aos": "^2.3.4",
     "axios": "^0.18.0",
-    "iview": "^3.1.3",
+    "i": "^0.3.6",
+    "iview": "^3.1.5",
     "jquery": "^3.3.1",
+    "npm": "^6.4.1",
     "vue": "^2.5.17",
-    "vue-i18n": "^8.2.0",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-i18n": "^8.3.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.5",
-    "@vue/cli-service": "^3.0.5",
-    "babel-plugin-import": "^1.9.1",
+    "@vue/cli-plugin-babel": "^3.1.1",
+    "@vue/cli-service": "^3.1.4",
+    "babel-plugin-import": "^1.11.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
     "vue-cli-plugin-i18n": "^0.5.1",
     "vue-cli-plugin-iview": "^1.0.6",
