--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "npm": "^6.10.1",
+    "vant": "^2.0.5",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
     "vue-chartjs": "^3.4.2",
@@ -40,6 +41,7 @@
     "vue-cli-plugin-iview": "^1.0.6",
     "vue-cli-plugin-moment": "^0.1.1",
     "vue-cli-plugin-sass-resources-loader": "^1.0.0",
+    "vue-cli-plugin-vant": "^1.0.1",
     "vue-template-compiler": "^2.6.10"
   },
   "browserslist": [
