--- a/package.json
+++ b/package.json
@@ -8,39 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-regular-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/vue-fontawesome": "^0.1.9",
-    "aos": "^2.3.4",
-    "axios": "^0.18.1",
-    "chart.js": "^2.9.3",
-    "iview": "^3.5.4",
-    "jquery": "^3.5.1",
+    "core-js": "^3.6.4",
     "moment": "^2.26.0",
-    "npm": "^6.14.5",
-    "vant": "^2.8.5",
     "vue": "^2.6.11",
-    "vue-awesome-swiper": "^3.1.3",
-    "vue-chartjs": "^3.5.0",
-    "vue-i18n": "^8.18.1",
-    "vue-router": "^3.3.2",
-    "vuex": "^3.4.0"
+    "vue-router": "^3.1.6",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.12.1",
-    "@vue/cli-service": "^4.4.1",
-    "babel-plugin-import": "^1.13.0",
-    "less": "^3.11.2",
-    "less-loader": "^4.1.0",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^7.3.1",
-    "vue-cli-plugin-i18n": "^0.5.2",
-    "vue-cli-plugin-iview": "^1.0.6",
-    "vue-cli-plugin-moment": "^0.1.1",
-    "vue-cli-plugin-sass-resources-loader": "^1.0.0",
-    "vue-cli-plugin-vant": "^1.0.1",
+    "@vue/cli-plugin-babel": "~4.3.0",
+    "@vue/cli-plugin-eslint": "~4.3.0",
+    "@vue/cli-plugin-router": "~4.3.0",
+    "@vue/cli-plugin-vuex": "~4.3.0",
+    "@vue/cli-service": "~4.3.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "less": "^3.0.4",
+    "less-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
