--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
     "moment": "^2.26.0",
+    "view-design": "^4.3.2",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.0",
     "vue-i18n": "^8.17.3",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
@@ -23,10 +27,13 @@
     "@vue/cli-plugin-vuex": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "babel-eslint": "^10.1.0",
+    "compression-webpack-plugin": "^4.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
     "vue-cli-plugin-i18n": "^1.0.1",
     "vue-template-compiler": "^2.6.11"
   }
