--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.4",
     "moment": "^2.26.0",
     "view-design": "^4.3.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
     "vue-i18n": "^8.17.3",
