--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
     "moment": "^2.26.0",
     "view-design": "^4.3.2",
-    "vue-awesome-swiper": "^3.1.3",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-chartjs": "^3.5.0",
     "vue-i18n": "^8.17.3",
     "vue-router": "^3.1.6",
@@ -28,6 +29,7 @@
     "@vue/cli-plugin-vuex": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.0",
     "compression-webpack-plugin": "^4.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
