--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "home-page",
+  "name": "citizen",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,31 +17,32 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
-    "core-js": "^3.6.4",
-    "moment": "^2.26.0",
+    "core-js": "^3.6.5",
+    "moment": "^2.27.0",
+    "pixi.js": "^5.3.3",
     "view-design": "^4.3.2",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^3.1.3",
     "vue-chartjs": "^3.5.0",
-    "vue-i18n": "^8.17.3",
-    "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vue-i18n": "^8.20.0",
+    "vue-router": "^3.4.3",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.3.0",
-    "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-plugin-router": "~4.3.0",
-    "@vue/cli-plugin-vuex": "~4.3.0",
-    "@vue/cli-service": "~4.3.0",
+    "@vue/cli-plugin-babel": "~4.5.3",
+    "@vue/cli-plugin-eslint": "~4.5.3",
+    "@vue/cli-plugin-router": "~4.5.3",
+    "@vue/cli-plugin-vuex": "~4.5.3",
+    "@vue/cli-service": "~4.5.3",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.0",
-    "compression-webpack-plugin": "^4.0.0",
-    "eslint": "^6.7.2",
+    "compression-webpack-plugin": "^4.0.1",
+    "eslint": "^7.6.0",
     "eslint-plugin-vue": "^6.2.2",
-    "less": "^3.0.4",
-    "less-loader": "^5.0.0",
+    "less": "^3.12.2",
+    "less-loader": "^6.2.0",
     "sass": "^1.26.10",
-    "sass-loader": "^9.0.2",
+    "sass-loader": "^9.0.3",
     "vue-cli-plugin-i18n": "^1.0.1",
     "vue-template-compiler": "^2.6.11"
   }
