--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "moment": "^2.27.0",
+    "pixi-filters": "^3.1.1",
     "pixi.js": "^5.3.3",
     "view-design": "^4.3.2",
     "vue": "^2.6.11",
